ingress-sock-shop.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/proxy-body-size: "1500m"
#    kubernetes.io/ingress.class: "nginx"
  name: front-end
  namespace: sock-shop
#  labels:
#    name: front-end
#    section: tools
spec:
  ingressClassName: nginx-internal
  rules:
    - host: socks.cust01.int.tronsec.ru
      http:
        paths:
          - backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
            pathType: Prefix
